--- a/Demo display.ipynb
+++ b/Demo display.ipynb
@@ -88,7 +88,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1, 2, 7], [1, 4, 9], [2, 8, 11], [3, 9, 11], [5, 7, 11]]\n"
+      "[[0, 1, 7], [3, 6, 8], [3, 10, 11]]\n"
      ]
     }
    ],
@@ -170,43 +170,13 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "klik []\n",
-      "klik [5]\n",
-      "klik [5, 7]\n",
-      "[5, 7, 11]\n",
-      "dat is een set, gefeliciflapstaart!!!\n",
-      "1\n",
-      "klik []\n",
-      "klik [3]\n",
-      "klik [3, 7]\n",
-      "[3, 7, 8]\n",
-      "dat is een set, gefeliciflapstaart!!!\n",
-      "2\n",
-      "klik []\n",
-      "klik [3]\n",
-      "klik [3, 6]\n",
-      "[3, 6, 4]\n",
-      "Leipe kut mogool, das geen set :(\n",
-      "1\n",
-      "klik []\n",
-      "klik [3]\n",
-      "klik [3, 4]\n",
-      "[3, 4, 5]\n",
-      "dat is een set, gefeliciflapstaart!!!\n",
-      "2\n"
-     ]
-    },
-    {
      "ename": "error",
      "evalue": "video system not initialized",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31merror\u001b[0m                                     Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-7-94fcee6bf074>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m    138\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    139\u001b[0m         \u001b[1;31m# drukt alles af op het scherm\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 140\u001b[1;33m         \u001b[0mpygame\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdisplay\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-7-e64f96662c37>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m    138\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    139\u001b[0m         \u001b[1;31m# drukt alles af op het scherm\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 140\u001b[1;33m         \u001b[0mpygame\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdisplay\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;31merror\u001b[0m: video system not initialized"
      ]
     }
@@ -261,7 +231,7 @@
     "    display_surface.blit(k10.image, (plekx[0],pleky[3]))\n",
     "    display_surface.blit(k11.image, (plekx[1],pleky[3]))\n",
     "    display_surface.blit(k12.image, (plekx[2],pleky[3]))\n",
-    "    myFont = pygame.font.SysFont(\"Arial\", 24)\n",
+    "    myFont = pygame.font.SysFont(\"Impact\", 24)\n",
     "    diceDisplay = myFont.render('Aantal punten:'+str(sum(punten)), 1, (255,0,0))\n",
     "    \n",
     "    display_surface.blit(diceDisplay,(50,15))\n",
@@ -356,13 +326,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
    "source": [
-    "    a= 0\n",
-    "    a+=1\n",
-    "    print(a)"
+    "def tussen(positie_muis, hoekpunten, x_of_y):\n",
+    "    for i in range(len(hoekpunten)-1):\n",
+    "        if hoekpunten[i]<=positie_muis<=hoekpunten[i]+x_of_y:\n",
+    "            return i\n",
+    "\n",
+    "def waar_geklikt(positie_muis, plekx, pleky):\n",
+    "    \n",
+    "    locatie_dict= {\"00\":0,\"10\":1,\"20\":2,\n",
+    "                   \"01\":3,\"11\":4,\"21\":5,\n",
+    "                   \"02\":6,\"12\":7,\"22\":8,\n",
+    "                   \"03\":9,\"13\":10,\"23\":11}\n",
+    "    \n",
+    "    x = str(tussen(positie_muis[0], plekx, 200))\n",
+    "    y = str(tussen(positie_muis[1], pleky, 100))\n",
+    "    geklikte_kaart = locatie_dict[x+y]\n",
+    "    return geklikte_kaart\n",
+    "        "
    ]
   },
   {
@@ -371,8 +363,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    " "
+    " locatie_dict= {\"0,0\":\"green\",\n",
+    "                 0: \"red\",\n",
+    "                 1: \"purple\"}\n",
+    "locatie_dict[-1]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
