--- a/Demo display.ipynb
+++ b/Demo display.ipynb
@@ -25,7 +25,8 @@
     "import Dek_functies as dek\n",
     "import Kaart_class as cards\n",
     "import pygame\n",
-    "import random"
+    "import random\n",
+    "import Display_functies as disp"
    ]
   },
   {
@@ -48,13 +49,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "deze hebben een aantal eigenschappen. De eerste vier zijn coördinaten en de laatste een bestand met de bijbehorende foto.\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -63,32 +57,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "1\n",
-      "1\n",
-      "0\n",
-      "<Surface(200x100x32 SW)>\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(card.kleur)\n",
-    "print(card.vorm)\n",
-    "print(card.vulling)\n",
-    "print(card.aantal)\n",
-    "print(card.image)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0, 1, 7], [3, 6, 8], [3, 10, 11]]\n"
+      "[[0, 8, 9], [0, 10, 11], [1, 2, 8]]\n"
      ]
     }
    ],
@@ -114,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -123,13 +92,13 @@
        "False"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dek.set_aanwijzen(gedeelde_kaarten,1,7,11)"
+    "dek.set_aanwijzen(gedeelde_kaarten,0,1,6)"
    ]
   },
   {
@@ -137,24 +106,6 @@
    "metadata": {},
    "source": [
     "### De volgende functie bepaalt de locaties van de 12 kaarten"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def locatie_kaarten(X,Y):\n",
-    "    Y_coordinaten = []\n",
-    "    hoogte = (Y-100)/4\n",
-    "    X_coordinaten = []\n",
-    "    breedte = (X-100)/3\n",
-    "    for i in range(3):\n",
-    "        X_coordinaten.append(50+int(i*breedte))\n",
-    "    for j in range(4):\n",
-    "        Y_coordinaten.append(50+int(j*hoogte))\n",
-    "    return Y_coordinaten, X_coordinaten"
    ]
   },
   {
@@ -166,18 +117,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "ename": "error",
-     "evalue": "video system not initialized",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31merror\u001b[0m                                     Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-7-e64f96662c37>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m    138\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    139\u001b[0m         \u001b[1;31m# drukt alles af op het scherm\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 140\u001b[1;33m         \u001b[0mpygame\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdisplay\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31merror\u001b[0m: video system not initialized"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0, 8, 9], [0, 10, 11], [1, 2, 8]]\n",
+      "goedzo je hebt iets aangeklikt [0]\n",
+      "[[0, 8, 9], [0, 10, 11], [1, 2, 8]]\n",
+      "goedzo je hebt iets aangeklikt [0, 10]\n",
+      "[[0, 8, 9], [0, 10, 11], [1, 2, 8]]\n",
+      "goedzo je hebt iets aangeklikt [0, 10, 11]\n",
+      "dat is een set, gefeliciflapstaart!!!\n"
      ]
     }
    ],
@@ -189,9 +142,9 @@
     "zwart = (0,0,0) \n",
     "  \n",
     "# bepaal de breedte (X) en hoogte (Y) van je scherm \n",
-    "X = 800\n",
+    "X = 1000\n",
     "Y = 600\n",
-    "pleky, plekx = locatie_kaarten(X,Y)\n",
+    "pleky, plekx = disp.locatie_kaarten(X,Y)\n",
     "  \n",
     "# maak een scherm van grootte X bij Y \n",
     "display_surface = pygame.display.set_mode((X, Y )) \n",
@@ -199,12 +152,12 @@
     "  \n",
     "# geef je scherm een naam\n",
     "pygame.display.set_caption('SET') \n",
-    "geklikt= []\n",
+    "gekozen_kaarten = []\n",
     "punten = []\n",
     "black=(0,0,0)\n",
     "i = 0\n",
     "while True : \n",
-    "      # vul je scherm zwart\n",
+    "# vul je scherm zwart\n",
     "    display_surface.fill(zwart) \n",
     "    k1= gedeelde_kaarten[0]\n",
     "    k2= gedeelde_kaarten[1]\n",
@@ -218,7 +171,7 @@
     "    k10=gedeelde_kaarten[9]\n",
     "    k11=gedeelde_kaarten[10]\n",
     "    k12=gedeelde_kaarten[11]\n",
-    "   # plak de afbeeldingen van de twaalf kaarten op de locaties die we eerder met de functie locatie_kaarten hebben bepaald\n",
+    "# plak de afbeeldingen van de twaalf kaarten op de locaties die we eerder met de functie locatie_kaarten hebben bepaald\n",
     "    display_surface.blit(k1.image, (plekx[0], pleky[0]))\n",
     "    display_surface.blit(k2.image, (plekx[1],pleky[0]))\n",
     "    display_surface.blit(k3.image, (plekx[2],pleky[0]))\n",
@@ -231,82 +184,36 @@
     "    display_surface.blit(k10.image, (plekx[0],pleky[3]))\n",
     "    display_surface.blit(k11.image, (plekx[1],pleky[3]))\n",
     "    display_surface.blit(k12.image, (plekx[2],pleky[3]))\n",
+    "#puntentelling    \n",
     "    myFont = pygame.font.SysFont(\"Impact\", 24)\n",
     "    diceDisplay = myFont.render('Aantal punten:'+str(sum(punten)), 1, (255,0,0))\n",
-    "    \n",
     "    display_surface.blit(diceDisplay,(50,15))\n",
     "    \n",
     "    \n",
-    "  \n",
     "    # iterate over the list of Event objects \n",
     "    # that was returned by pygame.event.get() method. \n",
     "    for event in pygame.event.get() : \n",
-    "\n",
-    "        aan = False\n",
-    "        if event.type == pygame.KEYDOWN:\n",
-    "            print(\"klik\",geklikt)\n",
-    "            while i<3 and aan == False:\n",
-    "                if event.key == pygame.K_1:\n",
-    "                    geklikt.append(0)\n",
-    "                    aan = True\n",
-    "                    i +=1\n",
-    "                if event.key == pygame.K_2:\n",
-    "                    geklikt.append(1)\n",
-    "                    aan = True\n",
-    "                    i +=1\n",
-    "                if event.key == pygame.K_3:\n",
-    "                    geklikt.append(2)\n",
-    "                    aan = True\n",
-    "                    i +=1\n",
-    "                if event.key == pygame.K_4:\n",
-    "                    geklikt.append(3)\n",
-    "                    aan = True\n",
-    "                    i +=1\n",
-    "                if event.key == pygame.K_5:\n",
-    "                    geklikt.append(4)\n",
-    "                    aan = True\n",
-    "                    i +=1\n",
-    "                if event.key == pygame.K_6:\n",
-    "                    geklikt.append(5)\n",
-    "                    aan = True\n",
-    "                    i +=1\n",
-    "                if event.key == pygame.K_7:\n",
-    "                    geklikt.append(6)\n",
-    "                    aan = True\n",
-    "                    i +=1\n",
-    "                if event.key == pygame.K_8:\n",
-    "                    geklikt.append(7)\n",
-    "                    aan = True\n",
-    "                    i +=1\n",
-    "                if event.key == pygame.K_9:\n",
-    "                    geklikt.append(8)\n",
-    "                    aan = True\n",
-    "                    i +=1\n",
-    "                if event.key == pygame.K_0:\n",
-    "                    geklikt.append(9)\n",
-    "                    aan = True\n",
-    "                    i +=1\n",
-    "                if event.key == pygame.K_q:\n",
-    "                    geklikt.append(10)\n",
-    "                    aan = True\n",
-    "                    i +=1\n",
-    "                if event.key == pygame.K_w:\n",
-    "                    geklikt.append(11)\n",
-    "                    aan = True\n",
-    "                    i +=1\n",
+    "        if event.type == pygame.MOUSEBUTTONUP:\n",
+    "            print(gevonden_sets)\n",
+    "            positie_muis = pygame.mouse.get_pos()            \n",
+    "            if disp.waar_geklikt(positie_muis, plekx, pleky) is \"zwart\":\n",
+    "                print(\"zwart\")\n",
+    "            if disp.waar_geklikt(positie_muis, plekx, pleky) is not \"zwart\":\n",
+    "                gekozen_kaarten.append(disp.waar_geklikt(positie_muis, plekx, pleky))  \n",
+    "                i += 1\n",
+    "                print(\"goedzo je hebt iets aangeklikt\", gekozen_kaarten)\n",
     "            if i == 3:\n",
-    "                print(geklikt)\n",
-    "                klopt = dek.set_aanwijzen(gedeelde_kaarten,geklikt[0],geklikt[1],geklikt[2])\n",
+    "                gekozen_kaarten.sort()\n",
+    "                klopt = dek.set_aanwijzen(gedeelde_kaarten,gekozen_kaarten[0],gekozen_kaarten[1],gekozen_kaarten[2])\n",
     "                if klopt == True:\n",
     "                    print(\"dat is een set, gefeliciflapstaart!!!\")\n",
-    "                    dek.set_vervangen(gedeelde_kaarten, geklikt[0],geklikt[1],geklikt[2], alle_kaarten)\n",
+    "                    dek.set_vervangen(gedeelde_kaarten, gekozen_kaarten[0],gekozen_kaarten[1],gekozen_kaarten[2], alle_kaarten)\n",
     "                    punten.append(1)\n",
     "                else:\n",
     "                    print(\"Leipe kut mogool, das geen set :(\")\n",
     "                    punten.append(-1)\n",
     "                i = 0\n",
-    "                geklikt= []\n",
-    "                print(sum(punten))\n",
+    "                gekozen_kaarten = []\n",
     "            \n",
     "        \n",
     "        # if event object type is QUIT \n",
@@ -326,47 +233,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n"
-     ]
-    }
-   ],
-   "source": [
-    "def tussen(positie_muis, hoekpunten, x_of_y):\n",
-    "    for i in range(len(hoekpunten)-1):\n",
-    "        if hoekpunten[i]<=positie_muis<=hoekpunten[i]+x_of_y:\n",
-    "            return i\n",
-    "\n",
-    "def waar_geklikt(positie_muis, plekx, pleky):\n",
-    "    \n",
-    "    locatie_dict= {\"00\":0,\"10\":1,\"20\":2,\n",
-    "                   \"01\":3,\"11\":4,\"21\":5,\n",
-    "                   \"02\":6,\"12\":7,\"22\":8,\n",
-    "                   \"03\":9,\"13\":10,\"23\":11}\n",
-    "    \n",
-    "    x = str(tussen(positie_muis[0], plekx, 200))\n",
-    "    y = str(tussen(positie_muis[1], pleky, 100))\n",
-    "    geklikte_kaart = locatie_dict[x+y]\n",
-    "    return geklikte_kaart\n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    " locatie_dict= {\"0,0\":\"green\",\n",
-    "                 0: \"red\",\n",
-    "                 1: \"purple\"}\n",
-    "locatie_dict[-1]"
+    "X = 1000\n",
+    "Y = 600\n",
+    "pleky, plekx = disp.locatie_kaarten(X,Y)\n",
+    "\n",
+    "disp.tussen(25,plekx,200)"
    ]
   },
   {
