--- a/Demo display.ipynb
+++ b/Demo display.ipynb
@@ -22,6 +22,7 @@
     }
    ],
    "source": [
+    "\n",
     "import Dek_functies as dek\n",
     "import Kaart_class as cards\n",
     "import pygame\n",
@@ -57,7 +58,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0, 8, 9], [0, 10, 11], [1, 2, 8]]\n"
+      "[[0, 1, 8], [0, 5, 10], [2, 4, 8]]\n"
      ]
     }
    ],
@@ -83,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -117,20 +118,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0, 8, 9], [0, 10, 11], [1, 2, 8]]\n",
-      "goedzo je hebt iets aangeklikt [0]\n",
-      "[[0, 8, 9], [0, 10, 11], [1, 2, 8]]\n",
-      "goedzo je hebt iets aangeklikt [0, 10]\n",
-      "[[0, 8, 9], [0, 10, 11], [1, 2, 8]]\n",
-      "goedzo je hebt iets aangeklikt [0, 10, 11]\n",
-      "dat is een set, gefeliciflapstaart!!!\n"
+      "[4]\n",
+      "[4, 7]\n",
+      "[4, 7, 10]\n",
+      "Leipe kut mogool, das geen set :(\n",
+      "[10]\n",
+      "[10, 7]\n",
+      "[10, 7, 4]\n",
+      "Leipe kut mogool, das geen set :(\n",
+      "[4]\n",
+      "[4, 7]\n",
+      "[4, 7, 10]\n",
+      "Leipe kut mogool, das geen set :(\n"
+     ]
+    },
+    {
+     "ename": "error",
+     "evalue": "display Surface quit",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31merror\u001b[0m                                     Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-5-4c4a1887aae7>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     25\u001b[0m \u001b[1;32mwhile\u001b[0m \u001b[1;32mTrue\u001b[0m \u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     26\u001b[0m \u001b[1;31m# vul je scherm zwart\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 27\u001b[1;33m     \u001b[0mdisplay_surface\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfill\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mzwart\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     28\u001b[0m     \u001b[0mk1\u001b[0m\u001b[1;33m=\u001b[0m \u001b[0mgedeelde_kaarten\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     29\u001b[0m     \u001b[0mk2\u001b[0m\u001b[1;33m=\u001b[0m \u001b[0mgedeelde_kaarten\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31merror\u001b[0m: display Surface quit"
      ]
     }
    ],
@@ -156,6 +173,9 @@
     "punten = []\n",
     "black=(0,0,0)\n",
     "i = 0\n",
+    "j=0\n",
+    "\n",
+    "\n",
     "while True : \n",
     "# vul je scherm zwart\n",
     "    display_surface.fill(zwart) \n",
@@ -189,32 +209,34 @@
     "    diceDisplay = myFont.render('Aantal punten:'+str(sum(punten)), 1, (255,0,0))\n",
     "    display_surface.blit(diceDisplay,(50,15))\n",
     "    \n",
-    "    \n",
-    "    # iterate over the list of Event objects \n",
-    "    # that was returned by pygame.event.get() method. \n",
+    "    pygame.display.update()\n",
+    "    # Haal alle events op\n",
     "    for event in pygame.event.get() : \n",
-    "        if event.type == pygame.MOUSEBUTTONUP:\n",
-    "            print(gevonden_sets)\n",
-    "            positie_muis = pygame.mouse.get_pos()            \n",
-    "            if disp.waar_geklikt(positie_muis, plekx, pleky) is \"zwart\":\n",
+    "        if event.type == pygame.MOUSEBUTTONUP: #Als er op muis is geklikt\n",
+    "            positie_muis = pygame.mouse.get_pos() #haal (x,y) van muis op       \n",
+    "            if disp.waar_geklikt(positie_muis, plekx, pleky) is \"zwart\": #als niet op een kaart geklikt\n",
     "                print(\"zwart\")\n",
-    "            if disp.waar_geklikt(positie_muis, plekx, pleky) is not \"zwart\":\n",
+    "            if disp.waar_geklikt(positie_muis, plekx, pleky) is not \"zwart\": #als op een kaart geklikt\n",
     "                gekozen_kaarten.append(disp.waar_geklikt(positie_muis, plekx, pleky))  \n",
     "                i += 1\n",
-    "                print(\"goedzo je hebt iets aangeklikt\", gekozen_kaarten)\n",
-    "            if i == 3:\n",
+    "                print(gekozen_kaarten)\n",
+    "            if i == 3: #zodra er drie kaarten zijn gevonden\n",
     "                gekozen_kaarten.sort()\n",
     "                klopt = dek.set_aanwijzen(gedeelde_kaarten,gekozen_kaarten[0],gekozen_kaarten[1],gekozen_kaarten[2])\n",
     "                if klopt == True:\n",
     "                    print(\"dat is een set, gefeliciflapstaart!!!\")\n",
     "                    dek.set_vervangen(gedeelde_kaarten, gekozen_kaarten[0],gekozen_kaarten[1],gekozen_kaarten[2], alle_kaarten)\n",
     "                    punten.append(1)\n",
+    "                    j=0\n",
     "                else:\n",
     "                    print(\"Leipe kut mogool, das geen set :(\")\n",
     "                    punten.append(-1)\n",
+    "                    j +=1\n",
     "                i = 0\n",
     "                gekozen_kaarten = []\n",
-    "            \n",
+    "            if j == 3:\n",
+    "                dek.geen_set_gedeeld(gedeelde_kaarten, alle_kaarten)\n",
+    "                \n",
     "        \n",
     "        # if event object type is QUIT \n",
     "        # then quitting the pygame \n",
@@ -227,8 +249,7 @@
     "            # quit the program. \n",
     "            quit() \n",
     "  \n",
-    "        # drukt alles af op het scherm  \n",
-    "        pygame.display.update()\n"
+    "        # drukt alles af op het scherm  \n"
    ]
   },
   {
