--- a/Demo display.ipynb
+++ b/Demo display.ipynb
@@ -24,6 +24,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -31,15 +40,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1, 5, 8], [2, 4, 8], [2, 7, 9], [3, 5, 7], [3, 6, 10], [3, 9, 11]]\n"
+      "[[1, 4, 11], [6, 9, 10]]\n"
      ]
     }
    ],
    "source": [
     "alle_kaarten = dek.maak_dek()\n",
     "gedeelde_kaarten = dek.eerste_keer_delen(alle_kaarten)\n",
-    "gevonden_sets = dek.alle_sets_vinden(gedeelde_kaarten)\n",
-    "print(gevonden_sets)\n"
+    "gevonden_sets = dek.alle_sets_vinden(gedeelde_kaarten)"
    ]
   },
   {
@@ -51,12 +59,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[11]\n",
-      "[11, 3]\n",
-      "[11, 3, 3]\n",
+      "(443, 342)\n",
+      "[7]\n",
+      "(469, 466)\n",
+      "[7, 10]\n",
+      "(678, 492)\n",
+      "[7, 10, 11]\n",
+      "(506, 446)\n",
       "[10]\n",
-      "[10, 9]\n",
-      "[10, 9, 3]\n"
+      "(418, 253)\n",
+      "[10, 4]\n",
+      "(414, 214)\n",
+      "[10, 4, 4]\n",
+      "(157, 382)\n",
+      "[6]\n",
+      "(477, 509)\n",
+      "[6, 10]\n",
+      "(449, 228)\n",
+      "[6, 10, 4]\n"
      ]
     }
    ],
@@ -91,6 +111,7 @@
     "while True : \n",
     "# vul je scherm zwart\n",
     "    display_surface.fill(zwart) \n",
+    "\n",
     "# plak de afbeeldingen van de twaalf kaarten op de locaties die we eerder met de functie locatie_kaarten hebben bepaald\n",
     "    nummer = 0\n",
     "    for y in range(0,4):\n",
@@ -117,14 +138,14 @@
     "        gekozen_kaarten = []\n",
     "        pygame.display.flip()\n",
     "\n",
-    "    \n",
     "    pygame.display.update()\n",
     "\n",
     "    # Haal alle events op\n",
     "    for event in pygame.event.get() : \n",
     "            \n",
     "        if event.type == pygame.MOUSEBUTTONUP: #Als er op muis is geklikt\n",
-    "            positie_muis = pygame.mouse.get_pos() #haal (x,y) van muis op       \n",
+    "            positie_muis = pygame.mouse.get_pos() #haal (x,y) van muis op   \n",
+    "            print(positie_muis)\n",
     "            if disp.waar_geklikt(positie_muis, plekx, pleky) is \"zwart\": #als niet op een kaart geklikt\n",
     "                print(\"zwart\")\n",
     "            if disp.waar_geklikt(positie_muis, plekx, pleky) is not \"zwart\": #als op een kaart geklikt\n",
@@ -148,11 +169,9 @@
     "        # then quitting the pygame \n",
     "        # and program both. \n",
     "        if event.type == pygame.QUIT : \n",
-    "  \n",
-    "            # deactivates the pygame library \n",
+    "\n",
     "            pygame.quit() \n",
     "  \n",
-    "            # quit the program. \n",
     "            quit() \n",
     "  \n",
     "        # drukt alles af op het scherm  \n"
