--- a/Demo display.ipynb
+++ b/Demo display.ipynb
@@ -27,27 +27,36 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "def "
+    "# Setup voor het spel\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[1, 4, 11], [6, 9, 10]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "alle_kaarten = dek.maak_dek()\n",
     "gedeelde_kaarten = dek.eerste_keer_delen(alle_kaarten)\n",
-    "gevonden_sets = dek.alle_sets_vinden(gedeelde_kaarten)"
+    "gevonden_sets = dek.alle_sets_vinden(gedeelde_kaarten)\n",
+    "tijd_over = 31\n",
+    "zwart = (0,0,0) \n",
+    "rood=(255,0,0)  \n",
+    "# bepaal de breedte (X) en hoogte (Y) van je scherm \n",
+    "X = 1000\n",
+    "Y = 600\n",
+    "pleky, plekx = disp.locatie_kaarten(X,Y)\n",
+    "\n",
+    "gekozen_kaarten = []\n",
+    "punten = 0\n",
+    "\n",
+    "i = 0"
    ]
   },
   {
@@ -59,41 +68,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(443, 342)\n",
+      "(437, 212)\n",
+      "[4]\n",
+      "(456, 507)\n",
+      "[4, 10]\n",
+      "(456, 506)\n",
+      "[4, 10, 10]\n",
+      "(446, 239)\n",
+      "[4]\n",
+      "(455, 333)\n",
+      "[4, 7]\n",
+      "(406, 501)\n",
+      "[4, 7, 10]\n",
+      "(479, 312)\n",
       "[7]\n",
-      "(469, 466)\n",
-      "[7, 10]\n",
-      "(678, 492)\n",
-      "[7, 10, 11]\n",
-      "(506, 446)\n",
-      "[10]\n",
-      "(418, 253)\n",
-      "[10, 4]\n",
-      "(414, 214)\n",
-      "[10, 4, 4]\n",
-      "(157, 382)\n",
-      "[6]\n",
-      "(477, 509)\n",
-      "[6, 10]\n",
-      "(449, 228)\n",
-      "[6, 10, 4]\n"
+      "(735, 335)\n",
+      "[7, 8]\n",
+      "(686, 127)\n",
+      "[7, 8, 2]\n",
+      "(214, 487)\n",
+      "[9]\n",
+      "(417, 460)\n",
+      "[9, 10]\n",
+      "(748, 63)\n",
+      "[9, 10, 2]\n"
      ]
     }
    ],
    "source": [
     "pygame.init() \n",
-    "screen = pygame.display.set_mode((128, 128))\n",
-    "clock = pygame.time.Clock()\n",
     "\n",
-    "tijd_over = 31\n",
-    "        \n",
-    "# definieer zwart\n",
-    "zwart = (0,0,0) \n",
-    "  \n",
-    "# bepaal de breedte (X) en hoogte (Y) van je scherm \n",
-    "X = 1000\n",
-    "Y = 600\n",
-    "pleky, plekx = disp.locatie_kaarten(X,Y)\n",
+    "clock = pygame.time.Clock()\n",
     "  \n",
     "# maak een scherm van grootte X bij Y \n",
     "display_surface = pygame.display.set_mode((X, Y )) \n",
@@ -101,12 +106,6 @@
     "  \n",
     "# geef je scherm een naam\n",
     "pygame.display.set_caption('SET') \n",
-    "gekozen_kaarten = []\n",
-    "punten = []\n",
-    "black = (0,0,0)\n",
-    "rood=(255,0,0)\n",
-    "i = 0\n",
-    "\n",
     "\n",
     "while True : \n",
     "# vul je scherm zwart\n",
@@ -121,7 +120,7 @@
     "    \n",
     "#puntentelling    \n",
     "    myFont = pygame.font.SysFont(\"Impact\", 24)\n",
-    "    diceDisplay = myFont.render('Aantal punten: '+str(sum(punten)), 1, (255,0,0))\n",
+    "    diceDisplay = myFont.render('Aantal punten: '+str(punten), 1, (255,0,0))\n",
     "    display_surface.blit(diceDisplay,(50,15))\n",
     "    tijd_over -= 1\n",
     "    if tijd_over>0:\n",
@@ -134,9 +133,8 @@
     "        display_surface.blit(text, (plekx[2], 15))\n",
     "        dek.geen_set_gedeeld(gedeelde_kaarten, alle_kaarten)\n",
     "        tijd_over=31\n",
-    "        punten.append(-1)\n",
+    "        punten -= 1\n",
     "        gekozen_kaarten = []\n",
-    "        pygame.display.flip()\n",
     "\n",
     "    pygame.display.update()\n",
     "\n",
@@ -146,21 +144,22 @@
     "        if event.type == pygame.MOUSEBUTTONUP: #Als er op muis is geklikt\n",
     "            positie_muis = pygame.mouse.get_pos() #haal (x,y) van muis op   \n",
     "            print(positie_muis)\n",
-    "            if disp.waar_geklikt(positie_muis, plekx, pleky) is \"zwart\": #als niet op een kaart geklikt\n",
-    "                print(\"zwart\")\n",
-    "            if disp.waar_geklikt(positie_muis, plekx, pleky) is not \"zwart\": #als op een kaart geklikt\n",
-    "                gekozen_kaarten.append(disp.waar_geklikt(positie_muis, plekx, pleky))  \n",
+    "            klik_locatie = disp.waar_geklikt(positie_muis, plekx, pleky)\n",
+    "            if klik_locatie is not \"zwart\": #als op een kaart geklikt\n",
+    "                gekozen_kaarten.append(klik_locatie)  \n",
     "                print(gekozen_kaarten)\n",
     "                i += 1\n",
-    "            if i == 3: #zodra er drie kaarten zijn gevonden\n",
+    "                \n",
+    "            #zodra er drie kaarten zijn gevonden\n",
+    "            if i == 3:\n",
     "                gekozen_kaarten.sort()\n",
     "                klopt = dek.set_aanwijzen(gedeelde_kaarten,gekozen_kaarten[0],gekozen_kaarten[1],gekozen_kaarten[2])\n",
     "                if klopt == True:\n",
     "                    tijd_over = 31\n",
     "                    dek.set_vervangen(gedeelde_kaarten, gekozen_kaarten[0],gekozen_kaarten[1],gekozen_kaarten[2], alle_kaarten)\n",
-    "                    punten.append(1)\n",
+    "                    punten += (1)\n",
     "                else:\n",
-    "                    punten.append(-1)\n",
+    "                    punten -= 1\n",
     "                i = 0\n",
     "                gekozen_kaarten = []\n",
     "                \n",
