--- a/Demo display.ipynb
+++ b/Demo display.ipynb
@@ -68,30 +68,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(437, 212)\n",
-      "[4]\n",
-      "(456, 507)\n",
-      "[4, 10]\n",
-      "(456, 506)\n",
-      "[4, 10, 10]\n",
-      "(446, 239)\n",
-      "[4]\n",
-      "(455, 333)\n",
-      "[4, 7]\n",
-      "(406, 501)\n",
-      "[4, 7, 10]\n",
-      "(479, 312)\n",
-      "[7]\n",
-      "(735, 335)\n",
-      "[7, 8]\n",
-      "(686, 127)\n",
-      "[7, 8, 2]\n",
-      "(214, 487)\n",
-      "[9]\n",
-      "(417, 460)\n",
-      "[9, 10]\n",
-      "(748, 63)\n",
-      "[9, 10, 2]\n"
+      "[1]\n",
+      "0\n",
+      "0\n",
+      "[1, 2]\n",
+      "0\n",
+      "[1, 2, 4]\n",
+      "0\n"
      ]
     }
    ],
@@ -123,7 +106,7 @@
     "    diceDisplay = myFont.render('Aantal punten: '+str(punten), 1, (255,0,0))\n",
     "    display_surface.blit(diceDisplay,(50,15))\n",
     "    tijd_over -= 1\n",
-    "    if tijd_over>0:\n",
+    "    if tijd_over > 0:\n",
     "        text = myFont.render((\"Tijd: \" + str(tijd_over)  +\" seconden\"), 1, (255,0,0))\n",
     "        display_surface.blit(text, (plekx[2],15))\n",
     "        pygame.display.flip()\n",
@@ -135,7 +118,6 @@
     "        tijd_over=31\n",
     "        punten -= 1\n",
     "        gekozen_kaarten = []\n",
-    "\n",
     "    pygame.display.update()\n",
     "\n",
     "    # Haal alle events op\n",
@@ -143,26 +125,29 @@
     "            \n",
     "        if event.type == pygame.MOUSEBUTTONUP: #Als er op muis is geklikt\n",
     "            positie_muis = pygame.mouse.get_pos() #haal (x,y) van muis op   \n",
-    "            print(positie_muis)\n",
     "            klik_locatie = disp.waar_geklikt(positie_muis, plekx, pleky)\n",
     "            if klik_locatie is not \"zwart\": #als op een kaart geklikt\n",
-    "                gekozen_kaarten.append(klik_locatie)  \n",
-    "                print(gekozen_kaarten)\n",
-    "                i += 1\n",
-    "                \n",
+    "                if klik_locatie not in gekozen_kaarten:\n",
+    "                    gekozen_kaarten.append(klik_locatie)  \n",
+    "                    print(gekozen_kaarten)\n",
+    "                    i += 1\n",
+    "                positie_muis = 0\n",
+    "                klik_locatie = 0\n",
+    "                print(klik_locatie)\n",
     "            #zodra er drie kaarten zijn gevonden\n",
     "            if i == 3:\n",
     "                gekozen_kaarten.sort()\n",
-    "                klopt = dek.set_aanwijzen(gedeelde_kaarten,gekozen_kaarten[0],gekozen_kaarten[1],gekozen_kaarten[2])\n",
+    "                klopt = dek.set_aanwijzen(gedeelde_kaarten, gekozen_kaarten)\n",
     "                if klopt == True:\n",
     "                    tijd_over = 31\n",
-    "                    dek.set_vervangen(gedeelde_kaarten, gekozen_kaarten[0],gekozen_kaarten[1],gekozen_kaarten[2], alle_kaarten)\n",
+    "                    dek.set_vervangen(gedeelde_kaarten, gekozen_kaarten, alle_kaarten)\n",
     "                    punten += (1)\n",
     "                else:\n",
     "                    punten -= 1\n",
     "                i = 0\n",
     "                gekozen_kaarten = []\n",
-    "                \n",
+    "                positie_muis = 0\n",
+    "                klik_locatie = 0\n",
     "        \n",
     "        # if event object type is QUIT \n",
     "        # then quitting the pygame \n",
@@ -174,6 +159,43 @@
     "            quit() \n",
     "  \n",
     "        # drukt alles af op het scherm  \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
