--- a/Demo display.ipynb
+++ b/Demo display.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -70,11 +70,41 @@
      "text": [
       "[1]\n",
       "0\n",
+      "[1, 4]\n",
       "0\n",
-      "[1, 2]\n",
+      "[1, 4, 5]\n",
       "0\n",
-      "[1, 2, 4]\n",
+      "[5]\n",
+      "0\n",
+      "[5]\n",
+      "0\n",
+      "[5]\n",
+      "0\n",
+      "[5]\n",
+      "0\n",
+      "[5]\n",
+      "0\n",
+      "[5, 4]\n",
+      "0\n",
+      "[5, 4]\n",
+      "0\n",
+      "[5, 4, 3]\n",
+      "0\n",
+      "[3]\n",
+      "0\n",
+      "[3]\n",
       "0\n"
+     ]
+    },
+    {
+     "ename": "error",
+     "evalue": "display Surface quit",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31merror\u001b[0m                                     Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-3-0fa532897555>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[1;32mwhile\u001b[0m \u001b[1;32mTrue\u001b[0m \u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[1;31m# vul je scherm zwart\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 14\u001b[1;33m     \u001b[0mdisplay_surface\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfill\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mzwart\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     15\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[1;31m# plak de afbeeldingen van de twaalf kaarten op de locaties die we eerder met de functie locatie_kaarten hebben bepaald\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31merror\u001b[0m: display Surface quit"
      ]
     }
    ],
@@ -129,19 +159,19 @@
     "            if klik_locatie is not \"zwart\": #als op een kaart geklikt\n",
     "                if klik_locatie not in gekozen_kaarten:\n",
     "                    gekozen_kaarten.append(klik_locatie)  \n",
-    "                    print(gekozen_kaarten)\n",
-    "                    i += 1\n",
+    "                \n",
+    "                print(gekozen_kaarten)\n",
     "                positie_muis = 0\n",
     "                klik_locatie = 0\n",
-    "                print(klik_locatie)\n",
+    "\n",
     "            #zodra er drie kaarten zijn gevonden\n",
-    "            if i == 3:\n",
+    "            if len(gekozen_kaarten) == 3:\n",
     "                gekozen_kaarten.sort()\n",
     "                klopt = dek.set_aanwijzen(gedeelde_kaarten, gekozen_kaarten)\n",
     "                if klopt == True:\n",
     "                    tijd_over = 31\n",
     "                    dek.set_vervangen(gedeelde_kaarten, gekozen_kaarten, alle_kaarten)\n",
-    "                    punten += (1)\n",
+    "                    punten += 1\n",
     "                else:\n",
     "                    punten -= 1\n",
     "                i = 0\n",
